Fix vertical alignment of temporal inputs on iOS
Fixes #13098
Closes #13099

--- a/less/forms.less
+++ b/less/forms.less
@@ -170,7 +170,10 @@ input[type="search"] {
 // given height of the input. Since this fucks up everything else, we have to
 // appropriately reset it for Internet Explorer and the size variations.
 
-input[type="date"] {
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
   line-height: @input-height-base;
   // IE8+ misaligns the text within date inputs, so we reset
   line-height: @line-height-base ~"\0";
